fix: no more horizontal scrolling

--- a/style/style.scss
+++ b/style/style.scss
@@ -83,20 +83,6 @@
     }
   }
 
-  div.hall {
-    width: 1920px;
-    height: 400px;
-    position: relative;
-    overflow: hidden;
-    img {
-      position: absolute;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      object-fit: cover;
-    }
-  }
-
   #contacts {
     padding: 75px 0;
     .content {
